src/test/tests/valid/charArrayInStringArray.wacc
begin
    char[] cs = [];
    string[] s = [cs]
end