src/test/tests/semanticError/stringToCharArray.wacc
begin
  char[] a = "hi"
end